# prompt-center

./: .env.example  .gitignore  CLAUDE.md  Makefile  QUICK_START.md  README.md
backend/: README.md  alembic.ini  conftest.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8b2932d2a753_initial_database_schema.py  9c3d43e4b821_add_base_url_to_llm_configs.py  a1b2c3d4e5f6_change_version_number_to_string.py
backend/docs/: comparison-demo.md  version-management-demo.md
backend/scripts/: cleanup_database.py  create_initial_versions.py
backend/src/: main.py
backend/src/api/: __init__.py
backend/src/api/v1/: __init__.py  api.py
backend/src/core/: __init__.py  config.py  database.py  logging.py
backend/src/crud/: __init__.py  comparison.py  llm_config.py  prompt.py  prompt_version.py
backend/src/models/: __init__.py  base.py  comparison.py  comparison_prompt_version.py  llm_config.py  prompt.py  prompt_version.py
backend/src/schemas/: __init__.py  comparison.py  llm_config.py  prompt.py  prompt_version.py
backend/src/services/: __init__.py  comparison.py  llm.py  prompt_version.py
backend/tests/: __init__.py
backend/tests/contract/: __init__.py  test_comparisons.py  test_prompts.py  test_versions.py
docs/: scripts-usage.md  ui-demo.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/comparisons/: ComparisonDashboard.tsx  NewComparisonForm.tsx
frontend/src/components/prompts/: PromptEditor.tsx  PromptList.tsx  PromptTester.tsx  VersionedPromptEditor.tsx
frontend/src/components/settings/: LLMSettings.tsx
frontend/src/components/versions/: VersionLLMCompare.tsx  VersionManager.tsx
frontend/src/lib/: api.ts
scripts/: aliases.sh  restart.sh  start-backend.sh  start-frontend.sh  start.sh  status.sh  stop.sh
specs/001-prompt-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-prompt-management/contracts/: get-prompts.json  post-comparisons.json  post-versions.json
